syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "com.sanglt.common";

enum ErrorCode {
  SYSTEM_ERROR = 0;
  RESOURCE_NOT_FOUND_ERROR = 1;
  VALIDATION_ERROR = 2;
}

message ErrorMessage {
  ErrorCode error_code = 1;
  string error_message = 2;
}